<resources>

    /* Main Activity */
    <string name="app_name">APPIS</string>
    <string name="txt_username">Username or Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_Home">Welcome to APPIS Marketplace</string>
    <string name="txt_Login">LOGIN</string>

    /* Register Activity */
    <string name="txt_titleR">Client Register</string>
    <string name="client_name">Name</string>
    <string name="client_lastname">Lastname</string>
    <string name="client_email">E-mail</string>
    <string name="client_phone">Phone number</string>


    /* Categories */
    <string name="txt_categories">Categories of Products</string>
    <string name="txt_dogs">Buy food for Dogs</string>
    <string name="txt_cats">Buy food for Cats</string>
    <string name="txt_choose">ⓘ Pick the icon to see different products options for your pet</string>

    /* Products Dogs */
    <string name="txt_intro_dogs">Find in this section the food you need for your dog. We are the best pet app store thanks to our large inventory of products for your furry; we strive every day to offer you the best service. Place your order online, pay with your preferred payment method and receive your purchase at home in the shortest possible time.</string>
    <string name="txt_dog_one">Nutra Nuggets</string>
    <string name="txt_dog_two">Hills Canine</string>
    <string name="txt_dog_three">Agility Gold</string>
    <string name="txt_dog_four">Nutriss Adulto</string>
    <string name="txt_dog_five">Nutrecan</string>
    <string name="txt_dog_six">Diamond</string>
    <string name="txt_dog_seven">Chunky</string>
    <string name="txt_dog_eight">Monello Puppy</string>
    <string name="txt_dog_nine">Max</string>
    <string name="txt_dog_ten">Monello Select Senior</string>

    /* Products Cats */
    <string name="txt_intro">The pet store with the largest variety of products for pets is Appis. We love your pet as much as you do, that is why we are expanding our nutritional offer for your pet daily. ¡Buy now and receive your products at home!</string>
    <string name="txt_cat_one">Nutra Nuggets</string>
    <string name="txt_cat_two">ProPlan Cat</string>
    <string name="txt_cat_three">Hills Feline</string>
    <string name="txt_cat_four">Royal Canin</string>
    <string name="txt_cat_five">Miringo</string>
    <string name="txt_cat_six">Nutrecat</string>
    <string name="txt_cat_seven">Purina Cat Chow</string>
    <string name="txt_cat_eight">Evolve</string>
    <string name="txt_cat_nine">Diamond</string>
    <string name="txt_cat_ten">Monello Select Cat</string>
    <string name="title">MainActivity2</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="test_register">Registro</string>

    <string name="mersh">Mersh</string>
    <string name="test_login">Start</string>
    <string name="preds_file" translatable="false">com.example.Job1.PREFERECE_FILE_KEY</string>
    <string name="default_web_client_id2" translatable="false">574079075791-kr76dadun5l13pqe4d7b8l2iepk5qbtq.apps.googleusercontent.com</string>
    //Message error
    <string name="error_login">Invalid username or password</string>
    <string name="error_auth">Failed to authenticate</string>
    <string name="fire_base">FireBase</string>
    <string name="fire_base_message">Integration of Firebase complete</string>
    <string name="facebook_app_id" translatable="false">231283592404544</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb231283592404544</string>

    <string name="test_NameExample">Your Name</string>
    <string name="test_LastName">Last Name</string>
    <string name="test_LastNameExample">Your Last Name</string>
    <string name="test_Mobile">Mobile</string>
    <string name="test_MobileExample">311111111</string>
    <string name="test_userExample">example@domain.com</string>
    <string name="test_passwordExample">Your Password</string>

    <string name="test_emailerror">It is not an email</string>

    <string name="test_TermsLink">Terms and conditions</string>
    <string name="test_TermsMessage">Accept all policies, security and terms when registering.</string>
    <string name="test_ok">Accept</string>
    <string name="test_cancel">Cancel</string>

    <string name="test_Seller">Seller</string>
    <string name="test_Category">Category</string>
    <string name="test_search">Search</string>
    <string name="test_All">All</string>

    //Empty
    <string name="test_EmptyMail">Empty email</string>
    <string name="test_EmptyPassword">Empty password</string>
    <string name="test_EmptyName">Empty name</string>
    <string name="test_EmptyLastName">Empty last name</string>
    <string name="test_EmptyMobile">Empty mobile</string>

    //request value

    <string name="test_minimum8">Minimum 8 characters</string>
    <string name="test_uppercase">At least one uppercase</string>
    <string name="test_digit">At least one number</string>
    <string name="test_character">At least one character</string>
    <string name="test_lowercase">At least one lowercase</string>

    //MENU
    <string name="cart">Cart</string>
    <string name="logout">logout</string>
</resources>