<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/txt_categories"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/txt_choose"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_dos"
        android:layout_width="411dp"
        android:layout_height="151dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="170dp">

        <ImageButton
            android:id="@+id/icon_dog"
            android:onClick="onDogs"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icon_dog" />

        <ImageButton
            android:id="@+id/icon_cat"
            android:onClick="onCats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icon_cat"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="67dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="325dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_dogs"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_cats"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>



</LinearLayout>