<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/txt_cats"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/txt_intro_cats"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_cat_one" />

            <ImageView
                android:id="@+id/cat_1"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/gato_uno_pequeno" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_cat_two" />

            <ImageView
                android:id="@+id/cat_2"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/gato_dos_pequeno" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_cat_three" />

            <ImageView
                android:id="@+id/cat_3"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/gato_tres_pequeno" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_cat_four" />

            <ImageView
                android:id="@+id/cat_4"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/gato_cuatro_pequeno" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_cat_five" />

            <ImageView
                android:id="@+id/cat_5"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/gato_cinco_pequeno" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_cat_six" />

            <ImageView
                android:id="@+id/cat_6"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/gato_seis_pequeno" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_cat_seven" />

            <ImageView
                android:id="@+id/cat_7"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/gato_siete_pequeno" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_cat_eight" />

            <ImageView
                android:id="@+id/cat_8"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/gato_ocho_pequeno" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_cat_nine" />

            <ImageView
                android:id="@+id/cat_9"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/gato_nueve_pequeno" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_cat_ten" />

            <ImageView
                android:id="@+id/cat_10"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/gato_diez_pequeno" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>