<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_uno"
        android:layout_width="400dp"
        android:layout_height="124dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="304dp"
            android:layout_height="174dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/txt_categories"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/txt_choose"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linear_dos"
        android:layout_width="401dp"
        android:layout_height="147dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="178dp">

        <ImageView
            android:id="@+id/icon_dog"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@drawable/icon_dog" />


        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider"
            android:scaleX="1"
            android:scaleY="1" />

        <ImageView
            android:id="@+id/icon_cat"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:clickable="false"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@drawable/icon_cat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="67dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="325dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_dogs"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_cats"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>