<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:gravity="center">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:src="@drawable/tienda"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Home"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="30sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_username"
            android:textColor="@color/black"
            android:textSize="25sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:id="@+id/edtUsername"
            android:hint="email@domain.com"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_password"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:textSize="25sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="*****"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="15"
                android:background="@android:color/transparent"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">



            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/google"
                android:layout_marginRight="10dp"/>


            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/facebook"
                android:layout_marginLeft="10dp"/>




        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="LOGIN"
            android:id="@+id/btn_Login"
            android:onClick="onLogin"
            android:layout_marginTop="20dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="REGISTER"
            android:id="@+id/btn_Register"
            android:onClick="onRegister"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">





        </LinearLayout>

    </LinearLayout>
</LinearLayout>